// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalResponse /> should render a not valid JSON radio response 1`] = `
<div
  className="block"
>
  <h3
    className="h3"
  >
    Etes vous ok et dispo pour l'entretenir vous même ?
  </h3>
  <p
    className="excerpt"
  >
    <FormattedMessage
      id="project.votes.widget.no_value"
      values={Object {}}
    />
  </p>
</div>
`;

exports[`<ProposalResponse /> should render a null button response 1`] = `
<div
  className="block"
>
  <h3
    className="h3"
  >
    Cet objet nécessite de l'entretien ?
  </h3>
  <p
    className="excerpt"
  >
    <FormattedMessage
      id="project.votes.widget.no_value"
      values={Object {}}
    />
  </p>
</div>
`;

exports[`<ProposalResponse /> should render a null media response 1`] = `
<div
  className="block"
>
  <h3
    className="h3"
  >
    Vous souhaitez partager le compte rendu des échanges ou tout autre document ?
  </h3>
  <p
    className="excerpt"
  >
    <FormattedMessage
      id="project.votes.widget.no_value"
      values={Object {}}
    />
  </p>
</div>
`;

exports[`<ProposalResponse /> should render a number response 1`] = `
<PrivateBox
  divClassName="block"
  message="global.form.private"
  show={false}
>
  <div>
    <h3
      className="h3"
    >
      Coût (estimation)
    </h3>
    <p>
      300
    </p>
  </div>
</PrivateBox>
`;

exports[`<ProposalResponse /> should render a radio response 1`] = `
<PrivateBox
  divClassName="block"
  message="global.form.private"
  show={false}
>
  <div>
    <h3
      className="h3"
    >
      Cet objet nécessite de l'entretien ?
    </h3>
    <p>
      Non
    </p>
  </div>
</PrivateBox>
`;

exports[`<ProposalResponse /> should render a section response 1`] = `
<div>
  <Connect(ComponentWithColors)>
    Section
  </Connect(ComponentWithColors)>
</div>
`;

exports[`<ProposalResponse /> should render a select response 1`] = `
<PrivateBox
  divClassName="block"
  message="global.form.private"
  show={false}
>
  <div>
    <h3
      className="h3"
    >
      Zone de la terrasse concernée
    </h3>
    <WYSIWYGRender
      value="Mur (le grand)"
    />
  </div>
</PrivateBox>
`;

exports[`<ProposalResponse /> should render a text response 1`] = `
<PrivateBox
  divClassName="block"
  message="global.form.private"
  show={false}
>
  <div>
    <h3
      className="h3"
    >
      Référence
    </h3>
    <WYSIWYGRender
      value="Leroy merlin lisa <br /> test"
    />
  </div>
</PrivateBox>
`;
